First release, added down button and made refinement

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Pearls &amp; Bones EP | Pearls &amp; Bones</title>
+		<title>Sandy Pearlman &amp; Bones</title>
 
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
 		<meta name="robots" content="index, follow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1, maximum-scale=1.25">
 
-		<meta name="description" content="description">
-		<meta name="keywords" content="keywords">
+		<meta name="description" content="The home of Toronto hiphop duo Sandy Pearlman &amp; Bones. A central hub for all content band related.">
+		<meta name="keywords" content="Sandy Pearlman  Bones rap hiphop Toronto 2D stag out stagd the oath">
 		<meta name="author" content="John Jacob Designs">
-		<meta name="copyright" content="&copy; 2013 John Jacob Designs and johnjacob.ca">
 
 		<link rel="icon" type="image/png" href="img/favicon.png">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
+		<!--[if lt IE 9]>
+			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 
 	</head>
 	<body>
@@ -56,15 +58,16 @@
 				<div class="aboutlandingwrapper">
 					<img src="img/wordmark.png" alt="Pearls and bones wordmark" class="wordmark openingtransitiontitle">
 					<h3 class="lines openingtransitionsubtitle"><span>TORONTO HIP-HOP DUO</span></h3>
-					<p class="openingtransitionparagraph"><a>Sandy Pearlman</a> and <a>Bones</a> (AKA - Pearls &amp; Bones) are a Toronto based hip hop duo. The group focuses on intricate lyricism courtesy of Bones mixed with innovative beats that prove genre is no barrier provided by producer and occasional vocalist Sandy Pearlman. The groups progression has skyrocketed enabling them to record in Toronto's award winning studio <a href="http://www.revolutionrecording.com/" target="_blank">Revolution Recording</a> in preparation for their debut full length album "2D". Stage shattering shows with the likes of Machine Gun Kelly have proven that originality and energy will continually manifest a strong, appreciated and involved fan base. After a successful underground EP release for the duo Bones is in the process of finalizing the design of the album drop, from merch, to album art, and everything in between. The movements fan support has created a buzz bubbling for the release. It's time to Stag Out or get out of the way!</p>
+					<p class="openingtransitionparagraph">Producer <a>Sandy Pearlman</a> and Wordsmith <a>Bones</a> have been honing their sound since the group formed in 2012, and are set to demolish what you THINK you know about hip-hop with a major release due out this fall. By combining traditional elements of the genre with their love of indie, folk, and even screamo music they have created a distinct and eclectic catalogue of songs for your listening pleasure. The pair has piled their wide-ranging creative expertise into establishing their own style and brand, using hobbies like fine cuisine and graphic design to compliment their musical identity. From referencing bangers (not just the club kind) in their lyrics to laser cutting their own wooden pendants for merch, Sandy Pearlman and Bones have everything covered. The two are well-established in their community and have a reputation for exceptional beats, quick raps, and grimy house parties. Their first musical release was in the spring of 2012, which features 5 original tracks that you can <a href="https://www.facebook.com/pearlsnbones/app_6452028673" target="_blank">download</a>.</p>
+					<img src="img/down.png" class="scrolldownbutton openingtransitionparagraph" alt="scroll down button">
 				</div>
-				<div class="harrybio">
-					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration" id="harry">
+
+				<div class="harrybio" id="harry">
+					<img src="img/harry.png" class="harryillustration" alt="Harry Warshaw Illustration">
 					<div class="harrybiotext" id="harrymobile">
 						<h1>Sandy Pearlman</h1>
 						<h2>Harry Joseph Warshaw</h2>
-						<br>
-						<p><span>Yolo ipsum vero enim tenetur expedita vitae reiciendis like we sittin on the bench, nigga we don't really play. Molestiae recusandae minima nisi omnis ab. Ex odio corporis sit they say love is in the air, so I ut reiciendis.</span></p>
+						<p><span>Drawing inspiration from both music he grew up listening to and his ever-expanding contemporary music library, Sandy Pearlman focuses on tone and rhythm to create unique instrumentals that blend classical, modern, acoustic, and electronic styles for an entirely new sonic experience. He's been training to be a musician all his life, discovering a love for hip-hop when his mother brought home the "8 Mile" soundtrack. Since then, he's familiarized himself with everything from Beethoven to Notorious B.I.G., Charlie Parker to Kanye West, and Palestrina to Diplo. Sandy has put all of his knowledge and experience to work for the upcoming release of Sandy Pearlman &amp; Bones' first full length project, pushing his creativity beyond any of his previous works.</span></p>
 					</div>
 				</div>
 				<div class="jakebio">
@@ -72,8 +75,7 @@
 					<div class="jakebiotext" id="jakemobile">
 						<h1>Bones</h1>
 						<h2>Jake Evelyn Oliveira</h2>
-						<br>
-						<p><span>Yolo ipsum vero enim tenetur expedita vitae reiciendis like we sittin on the bench, nigga we don't really play. Molestiae recusandae minima nisi omnis ab. Ex odio corporis sit they say love is in the air, so I ut reiciendis.</span></p>
+						<p><span>An upbringing in a heavily music oriented household has helped rapper, multi-instrumentalist, and designer Bones to find his footing in the ever changing eco-system that is the music industry. As a fan of genres such as post-hardcore, folk, indie, EDM, and punk, his eclectic music taste provides the foundation for a special brand of intricate and original wordplay. Lyrically Bones focuses on crafting thought provoking verses that provide substance through metaphors, and double entendres whilst exposing a sincere and unique personality. He has spent the past year writing lyrics and creating custom designed material ranging from album artwork, to merch, to posters, and everything in between in preparation for the duo’s full length album drop.</span></p>
 					</div>
 				</div>
 				<div class="aboutfooter">Designed by John Jacob Designs &mdash; <a href="http://johnjacob.ca/">Johnjacob.ca</a></div>
@@ -87,7 +89,7 @@
 				<!--format: MM/DD TTpm &mdash; Venue-->
 					<li>
 						<p>
-						<span class="leftcolumn">07/14 11PM &mdash; Detour Bar, 193 Balwin St.</span>
+						<span class="leftcolumn">07/14 11PM &mdash;<a href="http://goo.gl/maps/J1OuO"  target="_blank"> Detour Bar, 193 Balwin St.</a></span>
 						<span class="rightcolumn inactivelink">Buy Tickets</span>
 						<br>
 						</p>
@@ -113,47 +115,47 @@
 				<ul class="columns">
 					<li class="left openingtransitionparagraph">
 						<div class="imagecontainer">
-							<img src="img/fuckyou.jpg" alt="">
-							<p>Fuck you</p>
+							<img src="img/harryjake.jpg" alt="So fierce">
+							<p>So fierce</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/harrystudio.jpg" alt="">
-							<p>Harry in the studio</p>
+							<img src="img/harrystudio.jpg" alt="Sandy in the studio">
+							<p>Sandy in the studio</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/press.jpg" alt="">
+							<img src="img/press.jpg" alt="Our Editorial Debut">
 							<p>Our Editorial Debut</p>
 						</div>
 
 						<div class="imagecontainer">
-							<img src="img/harrymgk.jpg" alt="">
-							<p>Harry opening for MGK</p>
+							<img src="img/harrymgk.jpg" alt="Sandy opening for MGK">
+							<p>Sandy opening for MGK</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/stagoutparty.jpg" alt="">
+							<img src="img/stagoutparty.jpg" alt="Stag'd Out paint party">
 							<p>Stag'd Out paint party</p>
 						</div>
 					</li>
 
 					<li class="center openingtransitionparagraph">
 						<div class="imagecontainer">
-							<img src="img/harrymixing.jpg" alt="">
+							<img src="img/harrymixing.jpg" alt="Sandy Pearlman mixing">
 							<p>Sandy Pearlman mixing</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/jakeshoe.jpg" alt="">
-							<p>Kicking ass, and having class</p>
+							<img src="img/jakeshoe.jpg" alt="Kicking ass and having class">
+							<p>Kicking ass and having class</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/blowingherb.jpg" alt="">
+							<img src="img/blowingherb.jpg" alt="Blowing the herb">
 							<p>Blowing the herb</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/jakemgk2.jpg" alt="">
+							<img src="img/jakemgk2.jpg" alt="Bones opening for MGK">
 							<p>Bones opening for MGK</p>
 						</div>
 						<div class="imagecontainer">
-							<img src="img/swag.jpg" alt="">
+							<img src="img/swag.jpg" alt="Swagger">
 							<p>Swagger</p>
 						</div>
 					</li>
@@ -169,7 +171,7 @@
 						</div>
 						<div class="imagecontainer">
 							<img src="img/harrysitting.jpg" alt="">
-							<p>Harry pressing play</p>
+							<p>Sandy pressing play</p>
 						</div>
 						<div class="imagecontainer">
 							<img src="img/stagoutjake.jpg" alt="">
@@ -185,8 +187,7 @@
 
 
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script type='text/javascript' src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
-		<script type='text/javascript' src="js/waypoints.min.js"></script>
+		<script type='text/javascript' src="js/plugins.js"></script>
 		<script type='text/javascript' src="js/scripts.js"></script>
 	</body>
 </html>
